# MedLatent

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  medlatent_h.yaml  medlatent_x.yaml  models.yaml
data/: hospital_0.json  hospital_1.json  hospital_2.json  hospital_3.json  hospital_4.json  test.json  train.json  val.json
docs/: artifact_paths.md  reproduction.md
experiments/: build_cache_llama.sh  build_cache_mediphi.sh  eval_leakage.sh  eval_main_table.sh  train_h_qwen3.sh  train_x_qwen_host.sh
medlatent/: __init__.py  cache.py  checkpoints.py  data.py  forward.py  hf_data.py  hf_eval.py  hf_medlatent_h.py  hf_medlatent_x.py  latent_blocks.py  leakage.py  losses.py  metrics.py  modules.py  prompts.py  retrieval.py  toy_runtime.py
scripts/: _common.py  build_latent_cache.py  evaluate_diagnosis.py  evaluate_leakage.py  train_medlatent_h.py  train_medlatent_x.py
tests/: test_cli_toy_runtime.py  test_core_modules.py  test_prompts_and_sanitization.py  test_retrieval_and_cache.py
