[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medlatent"
version = "0.1.0"
description = "Compact latent KV communication for cross-hospital rare-disease diagnosis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.50",
]

[tool.setuptools.packages.find]
include = ["medlatent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
